すべてのAPIの説明を追記
